--- a/index.html
+++ b/index.html
@@ -1,112 +1,150 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>A Little Question</title>
-        <style>
-                body {
-                        font-family: 'Arial', sans-serif;
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        justify-content: center;
-                        min-height: 100vh;
-                        margin: 0;
-                        background: linear-gradient(135deg, #fdd835, #ff5722);
-                        color: #fff;
-                        text-align: center;
-                }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A Little Question</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            background: linear-gradient(135deg, #fdd835, #ff5722);
+            color: #fff;
+            text-align: center;
+            padding: 20px; /* Add some padding around the content */
+            box-sizing: border-box; /* Include padding in element's total width and height */
+        }
 
-                .container {
-                        background-color: rgba(255, 255, 255, 0.2);
-                        padding: 40px;
-                        border-radius: 15px;
-                        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-                        backdrop-filter: blur(10px);
-                }
+        .container {
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 30px; /* Adjust padding for smaller screens */
+            border-radius: 15px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            width: 90%; /* Make the container take up most of the screen width */
+            max-width: 500px; /* Set a maximum width for larger screens */
+        }
 
-                h1 {
-                        font-size: 2.5em;
-                        margin-bottom: 30px;
-                        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-                }
+        h1 {
+            font-size: 2em; /* Adjust font size for mobile */
+            margin-bottom: 20px; /* Adjust margin for mobile */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        }
 
-                .button-container {
-                        display: flex;
-                        gap: 20px;
-                        margin-top: 30px;
-                }
+        .button-container {
+            display: flex;
+            flex-direction: column; /* Stack buttons on smaller screens */
+            gap: 15px; /* Adjust gap for mobile */
+            margin-top: 25px; /* Adjust margin for mobile */
+            width: 100%; /* Make buttons take full width of the container */
+        }
 
-                button {
-                        padding: 25px 50px;
-                        font-size: 1.5em;
-                        cursor: pointer;
-                        border: none;
-                        border-radius: 10px;
-                        color: #fff;
-                        font-weight: bold;
-                        transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-                }
+        button {
+            padding: 18px 40px; /* Adjust padding for touch-friendliness */
+            font-size: 1.3em; /* Adjust font size for mobile */
+            cursor: pointer;
+            border: none;
+            border-radius: 10px;
+            color: #fff;
+            font-weight: bold;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            width: 100%; /* Make buttons take full width */
+            box-sizing: border-box; /* Include padding in button's total width and height */
+        }
 
-                .yes-button {
-                        background-color: #4CAF50;
-                        box-shadow: 0 4px 8px rgba(76, 175, 80, 0.4);
-                }
+        .yes-button {
+            background-color: #4CAF50;
+            box-shadow: 0 4px 8px rgba(76, 175, 80, 0.4);
+        }
 
-                .no-button {
-                        background-color: #f44336;
-                        box-shadow: 0 4px 8px rgba(244, 67, 54, 0.4);
-                }
+        .no-button {
+            background-color: #f44336;
+            box-shadow: 0 4px 8px rgba(244, 67, 54, 0.4);
+        }
 
-                button:hover {
-                        transform: scale(1.05);
-                        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-                }
+        button:hover {
+            transform: scale(1.02); /* Reduce hover scale for mobile */
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
 
-                button:disabled {
-                        opacity: 0.5;
-                        cursor: not-allowed;
-                        transform: none;
-                        box-shadow: none;
-                }
+        button:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+            transform: none;
+            box-shadow: none;
+        }
 
-                .message-container {
-                        font-size: 1.8em;
-                        margin-top: 40px;
-                        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-                }
-        </style>
+        .message-container {
+            font-size: 1.5em; /* Adjust font size for mobile */
+            margin-top: 30px; /* Adjust margin for mobile */
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Media query for larger screens (e.g., tablets and desktops) */
+        @media (min-width: 600px) {
+            .container {
+                padding: 40px;
+                width: auto;
+                max-width: 500px;
+            }
+
+            h1 {
+                font-size: 2.5em;
+                margin-bottom: 30px;
+            }
+
+            .button-container {
+                flex-direction: row; /* Display buttons side-by-side on larger screens */
+                gap: 20px;
+                margin-top: 30px;
+                width: auto; /* Allow buttons to size based on content */
+            }
+
+            button {
+                padding: 15px 30px;
+                font-size: 1.2em;
+                width: auto; /* Allow buttons to size based on content */
+            }
+
+            .message-container {
+                font-size: 1.8em;
+                margin-top: 40px;
+            }
+        }
+    </style>
 </head>
-
 <body>
-        <div class="container">
-                <h1>Got a Quick Question!</h1>
-                <div class="button-container">
-                        <button class="yes-button" id="yesBtn" onclick="handleYes()">Yes</button>
-                        <button class="no-button" id="noBtn" onclick="handleNo()">No</button>
-                </div>
-                <div class="message-container" id="message"></div>
+    <div class="container">
+        <h1>Got a Quick Question!</h1>
+        <div class="button-container">
+            <button class="yes-button" id="yesBtn" onclick="handleYes()">Yes</button>
+            <button class="no-button" id="noBtn" onclick="handleNo()">No</button>
         </div>
+        <div class="message-container" id="message"></div>
+    </div>
 
-        <script>
-                const yesButton = document.getElementById('yesBtn');
-                const noButton = document.getElementById('noBtn');
-                const messageDiv = document.getElementById('message');
+    <script>
+        const yesButton = document.getElementById('yesBtn');
+        const noButton = document.getElementById('noBtn');
+        const messageDiv = document.getElementById('message');
 
-                function handleYes() {
-                        messageDiv.innerText = "That's wonderful! Would you like to go for coffee with me sometime?";
-                        noButton.disabled = true;
-                        yesButton.disabled = true; // Disable the clicked button as well for clarity
-                }
+        function handleYes() {
+            messageDiv.innerText = "That's wonderful! Would you like to go for coffee with me sometime?";
+            noButton.disabled = true;
+            yesButton.disabled = true;
+        }
 
-                function handleNo() {
-                        messageDiv.innerText = "Ah, that's alright. Would you mind if I asked you out on a date sometime instead?";
-                        yesButton.disabled = true;
-                        noButton.disabled = true; // Disable the clicked button as well for clarity
-                }
-        </script>
+        function handleNo() {
+            messageDiv.innerText = "Ah, that's alright. Would you mind if I asked you out on a date sometime instead?";
+            yesButton.disabled = true;
+            noButton.disabled = true;
+        }
+    </script>
 </body>
-
 </html>
