--- a/index.html
+++ b/index.html
@@ -17,45 +17,45 @@
             background: linear-gradient(135deg, #fdd835, #ff5722);
             color: #fff;
             text-align: center;
-            padding: 20px; /* Add some padding around the content */
-            box-sizing: border-box; /* Include padding in element's total width and height */
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         .container {
             background-color: rgba(255, 255, 255, 0.2);
-            padding: 30px; /* Adjust padding for smaller screens */
+            padding: 30px;
             border-radius: 15px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(10px);
-            width: 90%; /* Make the container take up most of the screen width */
-            max-width: 500px; /* Set a maximum width for larger screens */
+            width: 90%;
+            max-width: 500px;
         }
 
         h1 {
-            font-size: 2em; /* Adjust font size for mobile */
-            margin-bottom: 20px; /* Adjust margin for mobile */
+            font-size: 2em;
+            margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .button-container {
             display: flex;
-            flex-direction: column; /* Stack buttons on smaller screens */
-            gap: 15px; /* Adjust gap for mobile */
-            margin-top: 25px; /* Adjust margin for mobile */
-            width: 100%; /* Make buttons take full width of the container */
+            gap: 15px;
+            margin-top: 25px;
+            width: 100%;
         }
 
         button {
-            padding: 18px 40px; /* Adjust padding for touch-friendliness */
-            font-size: 1.3em; /* Adjust font size for mobile */
+            padding: 20px; /* Adjust vertical padding */
+            font-size: 1.4em; /* Slightly increase font size */
             cursor: pointer;
             border: none;
             border-radius: 10px;
             color: #fff;
             font-weight: bold;
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-            width: 100%; /* Make buttons take full width */
-            box-sizing: border-box; /* Include padding in button's total width and height */
+            flex: 1; /* Distribute available space equally */
+            box-sizing: border-box;
+            text-align: center; /* Ensure text is centered within the wider buttons */
         }
 
         .yes-button {
@@ -69,7 +69,7 @@
         }
 
         button:hover {
-            transform: scale(1.02); /* Reduce hover scale for mobile */
+            transform: scale(1.02);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
@@ -81,12 +81,42 @@
         }
 
         .message-container {
-            font-size: 1.5em; /* Adjust font size for mobile */
-            margin-top: 30px; /* Adjust margin for mobile */
+            font-size: 1.5em;
+            margin-top: 30px;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
         }
 
-        /* Media query for larger screens (e.g., tablets and desktops) */
+        /* Media query for smaller screens (max-width: 599px) */
+        @media (max-width: 599px) {
+            .container {
+                padding: 20px;
+                width: 95%; /* Take up more width on smaller screens */
+            }
+
+            h1 {
+                font-size: 1.8em;
+                margin-bottom: 15px;
+            }
+
+            .button-container {
+                flex-direction: row; /* Display side-by-side on mobile */
+                gap: 10px; /* Reduce gap for smaller screens */
+                margin-top: 20px;
+            }
+
+            button {
+                padding: 25px; /* Adjust padding for touch */
+                font-size: 1.6em; /* Larger text for bigger buttons */
+                flex: 1; /* Each button takes equal available width */
+            }
+
+            .message-container {
+                font-size: 1.4em;
+                margin-top: 25px;
+            }
+        }
+
+        /* Media query for larger screens (min-width: 600px) */
         @media (min-width: 600px) {
             .container {
                 padding: 40px;
@@ -100,16 +130,16 @@
             }
 
             .button-container {
-                flex-direction: row; /* Display buttons side-by-side on larger screens */
+                flex-direction: row;
                 gap: 20px;
                 margin-top: 30px;
-                width: auto; /* Allow buttons to size based on content */
             }
 
             button {
                 padding: 15px 30px;
                 font-size: 1.2em;
-                width: auto; /* Allow buttons to size based on content */
+                flex: 0 auto; /* Don't force equal width on larger screens */
+                width: auto;
             }
 
             .message-container {
