--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            background: linear-gradient(135deg, #fdd835, #ff5722);
+            background: linear-gradient(135deg, #212121, #202020);
             color: #fff;
             text-align: center;
             padding: 20px;
