--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            background: linear-gradient(135deg, #212121, #202020);
+            background: linear-gradient(135deg,#c154c1, #ffb3de);
             color: #fff;
             text-align: center;
             padding: 20px;
