--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            background: linear-gradient(135deg,#c154c1, #800080;
+            background: linear-gradient(135deg,#202020, #800080;
             color: #fff;
             text-align: center;
             padding: 20px;
